# 1dim_sic_simulator

./: .gitignore  Doxyfile  README.md  energy_plot.py  plasma.in  plot.py  plot_dispersion.py  plot_sic.py  plot_simplex.py  savegif.py
doc/html/: annotated.html  classargparse.html  classboundary.html  classcommons.html  classefield.html  classes.html  classfft.html  classparameters.html  classparticles.html  classprogressbar.html  classsic.html  classstatus.html  classutils.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  moduleargparse-members.html  moduleboundary-members.html  modulecommons-members.html  moduleefield-members.html  modulefft-members.html  moduleparameters-members.html  moduleparticles-members.html  moduleprogressbar-members.html  modulesic-members.html  modulestatus-members.html  moduleutils-members.html  namespaceargparse.html  namespaceboundary.html  namespacecommons.html  namespaceefield.html  namespacefft.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaceparameters.html  namespaceparticles.html  (+12 more)
doc/latex/: annotated.tex  classargparse.tex  classboundary.tex  classcommons.tex  classefield.tex  classfft.tex  classparameters.tex  classparticles.tex  classprogressbar.tex  classsic.tex  classstatus.tex  classutils.tex  namespaceargparse.tex  (+16 more)
src/: CMakeLists.txt  argparse.f90  boundary.f90  commons.f90  efield.f90  fft.f90  main.f90  parameters.f90  particles.f90  progressbar.f90  sic.f90  simplex.f90  status.f90  utils.f90
(+63 files in other folders)
